# MathSoil

./: CMakeLists.txt  Implémentation SOIL.depend  Implémentation SOIL.layout  README.md
SOIL/src/: SOIL.c  image_DXT.c  image_helper.c  stb_image_aug.c
include/: Map.h  Quaternion.h
src/: Map.cpp  main.cpp
